--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,6 @@
-# MacOS
-.DS_Store
-
-# Windows
-Thumbs.db
-ehthumbs.db
-
-# Node modules
-node_modules/
-
-# Logs
-logs
+*.db
 *.log
-npm-debug.log*
-
-# Dependency directories
-jspm_packages/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# Environment variables
-.env
-
-# IDEs
-.vscode/
+*.iml
+target/
+bit/
 .idea/
-
-# Build directories
-dist/
-build/
